// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sustainability renders correctly with all props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c19 {
  margin-top: 0.5rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c10 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c14 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c20 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c8 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  line-height: 1.7;
  margin-bottom: 3rem;
  max-width: 680px;
}

.c12 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1.5rem;
  text-transform: uppercase;
}

.c13 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0 0 3rem;
  padding: 0;
}

.c15 {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c16 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 1.5rem 0;
}

.c16:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c17 {
  color: var(--color-headline);
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.25rem;
}

.c18 {
  font-size: 0.75rem;
  margin: 0;
}

.c21 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0;
}

@media (max-width: 1199.98px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.98px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 1199.98px) {
  .c11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c16 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

<div>
  <section
    class="c0"
    id="sustainability"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Sustainability
      </p>
      <p
        class="c3 c4 c6"
      >
        Values & Action
      </p>
      <h2
        class="c7 c8"
      >
        Sustainability matters to me
      </h2>
      <p
        class="c9"
      >
        Values and action
      </p>
      <p
        class="c10 c11"
      >
        I believe the tech industry has a responsibility to build lighter, more mindful products. Outside of work, I act on that belief — from how I run this site to how I spend my weekends.
      </p>
      <div
        class=""
      >
        <h3
          class="c12"
        >
          What I care about
        </h3>
        <ul
          aria-label="What I care about"
          class="c13"
        >
          <li
            class="c14"
          >
            Environment
          </li>
          <li
            class="c14"
          >
            Animal Welfare
          </li>
          <li
            class="c14"
          >
            Social Services
          </li>
          <li
            class="c14"
          >
            Disaster & Humanitarian Relief
          </li>
          <li
            class="c14"
          >
            Education
          </li>
          <li
            class="c14"
          >
            Science & Technology
          </li>
        </ul>
      </div>
      <div
        class=""
      >
        <h3
          class="c12"
        >
          Where I've shown up
        </h3>
        <ol
          aria-label="Where I've shown up"
          class="c15"
        >
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                Clean Up Your City
              </p>
              <p
                class="c3 c18"
              >
                May – Sep 2024
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Monthly clean-up initiatives in Amsterdam city center, working with residents and local entrepreneurs to maintain public spaces.
            </p>
          </li>
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                NDSM Cleans Up
              </p>
              <p
                class="c3 c18"
              >
                Jun – Sep 2024
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Monthly clean-up events at NDSM Wharf, Amsterdam's former industrial shipyard turned cultural hub.
            </p>
          </li>
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                About Waste
              </p>
              <p
                class="c3 c18"
              >
                Jun 2024
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Volunteered at the Silent Disco Party Cleanup at IJ-Hallen, Europe's largest flea market, combining environmental action with community fun.
            </p>
          </li>
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                Serve the City Amsterdam
              </p>
              <p
                class="c3 c18"
              >
                May – Sep 2024
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Community clean-up events at Vondelpark, supporting the park maintenance team in keeping one of Amsterdam's most visited public spaces clean.
            </p>
          </li>
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                Stichting Care4Good Foundation
              </p>
              <p
                class="c3 c18"
              >
                Mar 2024
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Social Services
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Helped unload and organize donated furniture for people experiencing homelessness and Ukrainian refugees.
            </p>
          </li>
          <li
            class="c16"
          >
            <div
              class=""
            >
              <p
                class="c3 c17"
              >
                Municipality of Casalecchio di Reno
              </p>
              <p
                class="c3 c18"
              >
                Jun – Jul 2009
              </p>
              <div
                class="c19"
              >
                <span
                  class="c20"
                >
                  Education
                </span>
              </div>
            </div>
            <p
              class="c3 c21"
            >
              Student volunteer at a summer youth program, supporting children's daily activities and ensuring their safety and wellbeing.
            </p>
          </li>
        </ol>
      </div>
    </section>
  </section>
</div>
`;

exports[`Sustainability renders correctly with minimal props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c10 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c8 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  line-height: 1.7;
  margin-bottom: 3rem;
  max-width: 680px;
}

.c12 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0 0 3rem;
  padding: 0;
}

.c14 {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c15 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 1.5rem 0;
}

.c15:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c16 {
  color: var(--color-headline);
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.25rem;
}

.c17 {
  font-size: 0.75rem;
  margin: 0;
}

.c18 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0;
}

@media (max-width: 1199.98px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.98px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 1199.98px) {
  .c11 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c15 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

<div>
  <section
    class="c0"
    id="sustainability"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Sustainability
      </p>
      <p
        class="c3 c4 c6"
      >
        Values & Action
      </p>
      <h2
        class="c7 c8"
      >
        Sustainability matters to me
      </h2>
      <p
        class="c9"
      >
        Values and action
      </p>
      <p
        class="c10 c11"
      >
        I believe the tech industry has a responsibility to build lighter, more mindful products.
      </p>
      <div
        class=""
      >
        <ul
          aria-label="Values"
          class="c12"
        >
          <li
            class="c13"
          >
            Environment
          </li>
          <li
            class="c13"
          >
            Education
          </li>
        </ul>
      </div>
      <div
        class=""
      >
        <ol
          aria-label="Volunteering"
          class="c14"
        >
          <li
            class="c15"
          >
            <div
              class=""
            >
              <p
                class="c3 c16"
              >
                Clean Up Your City
              </p>
              <p
                class="c3 c17"
              >
                May – Sep 2024
              </p>
            </div>
            <p
              class="c3 c18"
            >
              Monthly clean-up initiatives in Amsterdam city center.
            </p>
          </li>
        </ol>
      </div>
    </section>
  </section>
</div>
`;
